--- a/week 6/ideatorpechu/backend/package.json
+++ b/week 6/ideatorpechu/backend/package.json
@@ -22,35 +22,36 @@
   "author": "IdeatorPechu Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
+    "axios": "^1.10.0",
     "bcrypt": "^5.1.0",
-    "jsonwebtoken": "^9.0.2",
-    "nodemailer": "^6.9.4",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.32.5",
-    "redis": "^4.6.8",
-    "cloudinary": "^1.40.0",
-    "elasticsearch": "^16.7.3",
-    "moment": "^2.29.4",
-    "uuid": "^9.0.0",
-    "helmet": "^7.0.0",
+    "cloudinary": "^1.41.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "express-rate-limit": "^6.10.0",
-    "express-validator": "^7.0.1",
     "dotenv": "^16.3.1",
+    "elasticsearch": "^16.7.3",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.10.0",
+    "express-validator": "^7.2.1",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.4",
+    "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
-    "compression": "^1.7.4"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.4",
+    "redis": "^4.6.8",
+    "sharp": "^0.32.6",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.2",
-    "supertest": "^6.3.3",
     "eslint": "^8.47.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.28.0"
+    "eslint-plugin-import": "^2.28.0",
+    "jest": "^29.6.2",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3"
   },
   "engines": {
     "node": ">=16.0.0"
   }
-} 
+}
