--- a/week 6/ideatorpechu/frontend/package.json
+++ b/week 6/ideatorpechu/frontend/package.json
@@ -17,11 +17,16 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@types/react-dropzone": "^4.2.2",
     "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.59.0",
+    "react-hot-toast": "^2.5.2",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.3",
     "react-scripts": "5.0.1",
