--- a/week 6/ideatorpechu/backend/package.json
+++ b/week 6/ideatorpechu/backend/package.json
@@ -41,6 +41,7 @@
     "nodemailer": "^6.9.4",
     "redis": "^4.6.8",
     "sharp": "^0.32.6",
+    "socket.io": "^4.8.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
