--- a/week 6/ideatorpechu/backend/package.json
+++ b/week 6/ideatorpechu/backend/package.json
@@ -22,8 +22,11 @@
   "author": "IdeatorPechu Team",
   "license": "MIT",
   "dependencies": {
+    "@apollo/server": "^4.12.2",
+    "@graphql-tools/schema": "^10.0.23",
     "axios": "^1.10.0",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^1.41.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -32,17 +35,22 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
     "express-validator": "^7.2.1",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
+    "graphql-ws": "^6.0.5",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.4",
     "mongoose": "^7.5.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "newrelic": "^12.24.0",
     "nodemailer": "^6.9.4",
     "redis": "^4.6.8",
     "sharp": "^0.32.6",
     "socket.io": "^4.8.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
